--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "cors": "^2.8.5",
     "debug": "^2.6.9",
     "dotenv": "^8.2.0",
-    "ejs": "^2.6.2",
+    "ejs": "^2.7.4",
     "express": "^4.16.4",
     "express-session": "^1.17.1",
+    "html-pdf": "^2.2.0",
     "http-errors": "^1.6.3",
     "jsonwebtoken": "^8.5.1",
     "local-storage": "^2.0.0",
@@ -27,6 +28,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
+    "path": "^0.12.7",
     "sequelize": "^6.3.5"
   }
 }
