--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "local-storage": "^2.0.0",
     "moment": "^2.29.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.6",
