--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
     "express": "^4.16.4",
+    "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "html-pdf": "^2.2.0",
     "http-errors": "^1.6.3",
