--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.7.4",
     "express": "^4.16.4",
     "express-flash": "0.0.2",
+    "express-pdf": "^1.2.2",
     "express-session": "^1.17.1",
     "html-pdf": "^2.2.0",
     "http-errors": "^1.6.3",
@@ -31,6 +32,7 @@
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "path": "^0.12.7",
+    "pdf-creator-node": "^1.4.2",
     "sequelize": "^6.3.5"
   }
 }
