--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         port: 5001
         script: |
+          export NVM_DIR=~/.nvm
+          source ~/.nvm/nvm.sh
           cd /home/hcwingbd/horticultureFarm
           git pull origin main
           git status
